# qwasar_solutions

./: README.md  qwasar.sh
season_01/arc01/my_mastermind/: README.md  main.c  makefile
season_01/arc01/my_printf/: README.md  makefile  my_printf.c
season_01/arc02/my_ls/: README.md  ls.c  makefile  my_ls
season_01/arc02/my_readline/: README.md  main.c  makefile
season_01/arc02/my_tar/: README.md  file.tar  main.c  makefile  my_tar  tar.c  tar.h
season_02/bootcamp_ruby/my_roman_numerals_converter/: README.md
season_02/my-css-is-easy-i/: index.html  style.css
season_02/my_allocine/: README.md
season_02/my_allocine/ex00/: my_allocine.rb
season_02/my_bc/: Makefile  README.md  main.c
season_02/my_curl/: Makefile  README.md
season_02/my_curl/source/: buffered_response_printer.c  buffered_response_printer.h  http_exchange.c  http_exchange.h  http_parse.c  http_parse.h  main.c  my_curl.c  my_curl.h  socket.c  (+1 more)
season_02/my_libasm/: README.md  assembly_stubs.h  main.c  makefile  testing_functions.h
season_02/my_malloc/: Makefile  README.md  main.c  my_malloc.c  my_malloc.h
season_02/my_mouse/: README.md  makefile
season_03/software_engineer_rust/my_redis_server/: Cargo.toml  README.md  debug_dump.my_rdb  dump.my_rdb
season_03/software_engineer_rust/my_redis_server/src/: dump.my_rdb  lib.rs  main.rs
season_03/software_engineer_rust/my_redis_server/src/redis_engine/: mod.rs  util.rs
season_03/software_engineer_rust/my_redis_server/src/redis_engine/command_execution/: hash_command.rs  kvp_command.rs  list_command.rs  mod.rs  one_off_command.rs
(+66 files in other folders)
