[package]
name = "my_redis_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_json = "1.0"
job_scheduler = "1.2.1"
signal-hook = { version = "0.3.4", features = ["extended-siginfo"] }